--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+.message-container {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.input-form {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.input-field {
+  width: 400px;
+  margin-left: 50px;
+}
+
+.input-container {
+  justify-content: flex-start !important;
+}
+
 /* Custom scrollbar (optional) */
 .chat-scroll::-webkit-scrollbar {
   width: 6px;
@@ -12,6 +31,16 @@
 }
 .chat-scroll {
   scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+}
+
+.small-text {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.font-semibold {
+  font-size: 22px;
+  font-weight: 700;
 }
 
 /* Survey Modal styles */
@@ -46,13 +75,15 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px; /* 버튼들 간 간격 */
-  justify-content: center; /* 버튼들을 가운데 정렬 */
-  margin-top: 20px;
+  justify-content: start; /* 버튼들을 가운데 정렬 */
+  margin: 20px 0 20px 50px;
+  /* margin-top: 20px;
+  margin-bottom: 20px; */
 }
 
 /* 각 옵션 버튼 */
 .option-button {
-  background-color: #4d4d4d;
+  background-color: #929292;
   color: white;
   border: none;
   padding: 12px 20px;
@@ -66,15 +97,47 @@
 }
 
 
+
 .option-button:hover {
   background-color: #333333;
-  transform: scale(1.1);
+  /* transform: scale(1.1); */
 }
-
 
 .option-button:active {
   background-color: #333333;
   transform: scale(0.95);
+}
+
+.btn-list-item:active,
+.btn-list-item:hover {
+  background-color: #fff3d4
+}
+
+.btn-yellow {
+  background-color: #fff3d4
+}
+
+
+.modal-button {
+  background-color: #cb5e28;
+  color: white;
+  border: none;
+  padding: 12px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;  
+}
+
+.full-width {
+  width: 100%;
+}
+
+.items-end {
+  justify-content: flex-end;
 }
 
 .input-container {
